[gd_scene load_steps=81 format=2]

[ext_resource path="res://Scripts/Options_Card.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cards/Right/9Right.png" type="Texture" id=2]
[ext_resource path="res://Animation/UpCard.tres" type="Animation" id=3]
[ext_resource path="res://Scenes/Situation_Card.gd" type="Script" id=4]
[ext_resource path="res://Scenes/OptionCard1.gd" type="Script" id=5]
[ext_resource path="res://Scenes/OptionCard2.gd" type="Script" id=6]
[ext_resource path="res://Scenes/OptionCard1Area.gd" type="Script" id=7]
[ext_resource path="res://Scenes/OptionCard2Area.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Cards.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Cards/Right/8Right.png" type="Texture" id=10]
[ext_resource path="res://SoundFX/ES_Game Card Slide 2 - SFX Producer.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Cards/Right/4Right.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Cards/Right/1Right.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Cards/Right/2Right.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Cards/Right/3Right.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Cards/Right/6Right.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Cards/Right/7Right.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Cards/Right/10Right.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Cards/Right/5Right.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Cards/Right/11Right.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Cards/Situations/18Situation.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Cards/Wrong/12Wrong.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Cards/Wrong/3Wrong.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Cards/Wrong/14Wrong.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Cards/Situations/20Situation.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Cards/Wrong/19Wrong.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Cards/Situations/6Situation.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Cards/Right/18Right.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Cards/Wrong/4Wrong.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Cards/Wrong/5Wrong.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Cards/Wrong/10Wrong.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Cards/Wrong/16Wrong.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Cards/Situations/11Situation.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Cards/Situations/2Situation.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Cards/Wrong/2Wrong.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Cards/Situations/8Situation.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Cards/Situations/14Situation.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Cards/Situations/16Situation.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Cards/Wrong/17Wrong.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Cards/Situations/15Situation.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Cards/Situations/17Situation.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Cards/Wrong/9Wrong.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Cards/Wrong/13Wrong.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Cards/Wrong/6Wrong.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Cards/Wrong/15Wrong.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Cards/Situations/4Situation.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Cards/Wrong/1Wrong.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Cards/Wrong/11Wrong.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Cards/Situations/3Situation.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Cards/Situations/1Situation.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Cards/Situations/10Situation.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Cards/Situations/7Situation.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Cards/Wrong/18Wrong.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Cards/Situations/13Situation.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Cards/Situations/19Situation.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Cards/Situations/12Situation.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Cards/Wrong/8Wrong.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Cards/Wrong/20Wrong.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Cards/Right/20Right.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Cards/Wrong/7Wrong.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Cards/Situations/5Situation.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Cards/Right/19Right.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Cards/Situations/9Situation.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Cards/Right/13Right.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Cards/Right/15Right.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Cards/Right/16Right.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Cards/Right/14Right.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Cards/Right/12Right.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Cards/Right/17Right.png" type="Texture" id=69]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 50 ), ExtResource( 34 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 61 ), ExtResource( 27 ), ExtResource( 52 ), ExtResource( 36 ), ExtResource( 63 ), ExtResource( 51 ), ExtResource( 33 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 37 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 21 ), ExtResource( 55 ), ExtResource( 25 ) ],
"loop": true,
"name": "Situation",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 2, 1, 3.03143 ),
"update": 0,
"values": [ Vector2( 1185, 280 ), Vector2( 880, 280 ), Vector2( 900, 280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Leave"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 300, 0 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 68 ), ExtResource( 64 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 69 ), ExtResource( 28 ), ExtResource( 62 ), ExtResource( 59 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 44 ), ExtResource( 60 ), ExtResource( 57 ), ExtResource( 42 ), ExtResource( 31 ), ExtResource( 48 ), ExtResource( 22 ), ExtResource( 43 ), ExtResource( 24 ), ExtResource( 45 ), ExtResource( 32 ), ExtResource( 39 ), ExtResource( 53 ), ExtResource( 26 ), ExtResource( 58 ) ],
"loop": true,
"name": "wrong",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 330, 750 ), Vector2( 330, 550 ), Vector2( 330, 560 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 750.241, 1997.25 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0147745, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 330, 560 ), Vector2( 330, 460 ) ]
}

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 68 ), ExtResource( 64 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 69 ), ExtResource( 28 ), ExtResource( 62 ), ExtResource( 59 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 44 ), ExtResource( 60 ), ExtResource( 57 ), ExtResource( 42 ), ExtResource( 31 ), ExtResource( 48 ), ExtResource( 22 ), ExtResource( 43 ), ExtResource( 24 ), ExtResource( 45 ), ExtResource( 32 ), ExtResource( 39 ), ExtResource( 53 ), ExtResource( 26 ), ExtResource( 58 ) ],
"loop": true,
"name": "wrong",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 752.271, 1999.77 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 640, 560 ), Vector2( 640, 460 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 350 ) ]
}

[node name="Cards" type="Node2D"]
script = ExtResource( 9 )

[node name="Situation" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="SituationCard" type="AnimatedSprite" parent="Situation"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1185, 280 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "Situation"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Situation/SituationCard"]
anims/Slide = SubResource( 2 )

[node name="Leave" type="AnimationPlayer" parent="Situation"]
anims/Leave = SubResource( 3 )

[node name="Options" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CardContainer" type="Node2D" parent="Options"]

[node name="OptionCard1" type="AnimatedSprite" parent="Options/CardContainer"]
position = Vector2( 330, 750 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "wrong"
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Options/CardContainer/OptionCard1"]
anims/Up2 = SubResource( 5 )

[node name="OptionCard1Area" type="Area2D" parent="Options/CardContainer/OptionCard1"]
position = Vector2( -110, -150 )
scale = Vector2( 0.333333, 0.2 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options/CardContainer/OptionCard1/OptionCard1Area"]
position = Vector2( 329.639, 748.337 )
shape = SubResource( 6 )

[node name="Peak" type="AnimationPlayer" parent="Options/CardContainer/OptionCard1"]
playback_speed = 4.0
anims/Peak = SubResource( 7 )

[node name="CardContainer2" type="Node2D" parent="Options"]

[node name="OptionCard2" type="AnimatedSprite" parent="Options/CardContainer2"]
position = Vector2( 640, 750 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 8 )
animation = "wrong"
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Options/CardContainer2/OptionCard2"]
anims/UpCard = ExtResource( 3 )

[node name="OptionCard2Area" type="Area2D" parent="Options/CardContainer2/OptionCard2"]
position = Vector2( -213.333, -150 )
scale = Vector2( 0.333333, 0.2 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options/CardContainer2/OptionCard2/OptionCard2Area"]
position = Vector2( 639.491, 750.165 )
shape = SubResource( 9 )

[node name="Peak" type="AnimationPlayer" parent="Options/CardContainer2/OptionCard2"]
playback_speed = 4.0
anims/Peak = SubResource( 10 )

[node name="Leave" type="AnimationPlayer" parent="Options"]
anims/Leave = SubResource( 11 )

[node name="Loaded" type="Timer" parent="Options"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Timer" type="Timer" parent="AudioStreamPlayer2D"]
wait_time = 0.5
one_shot = true
autostart = true
[connection signal="animation_finished" from="Situation/Leave" to="." method="_on_Leave_animation_finished"]
[connection signal="click" from="Options/CardContainer/OptionCard1/OptionCard1Area" to="." method="_on_OptionCard1Area_click"]
[connection signal="mouse_entered" from="Options/CardContainer/OptionCard1/OptionCard1Area" to="Options/CardContainer/OptionCard1" method="_on_OptionCard1Area_mouse_entered"]
[connection signal="mouse_exited" from="Options/CardContainer/OptionCard1/OptionCard1Area" to="Options/CardContainer/OptionCard1" method="_on_OptionCard1Area_mouse_exited"]
[connection signal="click" from="Options/CardContainer2/OptionCard2/OptionCard2Area" to="." method="_on_OptionCard2Area_click"]
[connection signal="mouse_entered" from="Options/CardContainer2/OptionCard2/OptionCard2Area" to="Options/CardContainer2/OptionCard2" method="_on_OptionCard2Area_mouse_entered"]
[connection signal="mouse_exited" from="Options/CardContainer2/OptionCard2/OptionCard2Area" to="Options/CardContainer2/OptionCard2" method="_on_OptionCard2Area_mouse_exited"]
[connection signal="timeout" from="Options/Loaded" to="Options" method="_on_Loaded_timeout"]
[connection signal="timeout" from="AudioStreamPlayer2D/Timer" to="." method="_on_TimerSFX_timeout"]
